--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,16 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-          
-      - name: Install dependencies
-        run: yarn    
       
+      # Instalar as dependências do NPM/yarn
+      - name: Install dependencies
+        run: yarn  
+          
+      # Executar a build 
       - name: Run build
         run: yarn build
 
+      # Copiar a pasta dist pra dentro da Digital Ocean
       - name: Copy dist to Digital Ocean
         uses: appleboy/scp-action@master
         with:
@@ -43,15 +46,18 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          source: "."
+          source: ".,!node_modules"
           target: "~/app/node_deploy"       
        
-      # Instalar as dependências do NPM/yarn
-      # Executar a build
-      # Copiar a pasta dist pra dentro da Digital Ocean
       
       # Substituir o código existente na pasta "dist" pelo novo código
+      
+          
       # Executar "yarn" na Digital Ocean
+      
+      
       # Executar as migrations do TypeORM
+      
+      
       # Restart no servidor Node.js
       
